test-cases/negative/test_027_undefined_variable_in_assignment.lay
# negative test: using undefined variable in assignment
# expected: type error or runtime error

the variable x of type Number is undefined_var


